story overflow fixed

--- a/src/components/StoryIcon/StoryIcon.scss
+++ b/src/components/StoryIcon/StoryIcon.scss
@@ -73,6 +73,8 @@
             filter: blur(1px);
             -webkit-filter: blur(1px);
             background-color: rgb(161, 161, 161);
+            border-radius: 100%;
+            overflow: hidden;
         }
     }
 
